--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@babel/runtime": "^7.18.9",
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.3",
+    "@types/pg": "^8.6.5",
     "express": "^4.18.1",
-    "nodemon": "^2.0.19"
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
@@ -25,6 +26,8 @@
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
     "@babel/register": "^7.18.9",
-    "typescript": "^4.7.4"
+    "nodemon": "^2.0.19",
+    "typescript": "^4.7.4",
+    "dotenv": "^16.0.1"
   }
 }
