--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "dependencies": {
     "@babel/cli": "^7.18.10",
     "@babel/runtime": "^7.18.9",
-    "@types/express": "^4.17.13",
-    "@types/node": "^18.6.3",
-    "@types/pg": "^8.6.5",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3"
   },
   "devDependencies": {
@@ -26,8 +26,14 @@
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
     "@babel/register": "^7.18.9",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/node": "^18.6.3",
+    "@types/pg": "^8.6.5",
+    "@types/cookie-parser": "^1.4.3",
+    "bcryptjs": "^2.4.3",
     "nodemon": "^2.0.19",
-    "typescript": "^4.7.4",
-    "dotenv": "^16.0.1"
+    "typescript": "^4.7.4"
   }
 }
