--- a/package.json
+++ b/package.json
@@ -1,37 +1,41 @@
 {
   "name": "olisa",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/app.ts",
   "repository": "https://github.com/oleesir/medicine_tracker_be.git",
   "author": "oleesir <oleesir@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "DEV_ENV=true nodemon index.js",
-    "start": "node index.js",
-    "types": "tsc",
-    "build": "babel src --out-dir lib --copy-files --extensions '.ts,.js'"
+    "dev": "cross-env NODE_ENV=development ts-node-dev ./src/app.ts --exec babel-node",
+    "clean": "rm -rf dist",
+    "build": "npm run clean && cross-env NODE_ENV=production babel --extensions .ts ./src -d ./dist",
+    "start": "cross-env NODE_ENV=production node ./dist/app.js"
   },
   "dependencies": {
     "@babel/cli": "^7.18.10",
     "@babel/runtime": "^7.18.9",
+    "@types/morgan": "^1.9.3",
     "cookie-parser": "^1.4.6",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.3"
+    "morgan": "^1.10.0",
+    "pg": "^8.7.3",
+    "regenerator-runtime": "^0.13.9",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
-    "@babel/plugin-transform-runtime": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
     "@babel/register": "^7.18.9",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.6.3",
     "@types/pg": "^8.6.5",
-    "@types/cookie-parser": "^1.4.3",
     "bcryptjs": "^2.4.3",
     "nodemon": "^2.0.19",
     "typescript": "^4.7.4"
