--- a/package.json
+++ b/package.json
@@ -7,20 +7,23 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development ts-node-dev ./src/app.ts --exec babel-node",
+    "pm": "pm2-dev start ./src/app.ts",
     "clean": "rm -rf dist",
     "build": "npm run clean && cross-env NODE_ENV=production babel --extensions .ts ./src -d ./dist",
-    "start": "cross-env NODE_ENV=production node ./dist/app.js"
+    "start": "cross-env  NODE_ENV=production node ./dist/app.js"
   },
   "dependencies": {
     "@babel/cli": "^7.18.10",
     "@babel/runtime": "^7.18.9",
     "@types/morgan": "^1.9.3",
+    "@types/node-cron": "^3.0.2",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.2",
     "pg": "^8.7.3",
     "regenerator-runtime": "^0.13.9",
     "ts-node-dev": "^2.0.0"
