--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@babel/runtime": "^7.18.9",
     "@types/morgan": "^1.9.3",
     "@types/node-cron": "^3.0.2",
+    "@types/nodemailer": "^6.4.5",
+    "@types/nodemailer-express-handlebars": "^4.0.2",
+    "@types/nodemailer-mailgun-transport": "^1.4.3",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
@@ -24,6 +27,10 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.2",
+    "nodemailer": "^6.7.8",
+    "nodemailer-express-handlebars": "^5.0.0",
+    "nodemailer-mailgun-transport": "^2.1.4",
+    "path": "^0.12.7",
     "pg": "^8.7.3",
     "regenerator-runtime": "^0.13.9",
     "ts-node-dev": "^2.0.0"
