--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "joi": "^17.6.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.2",
