--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/cli": "^7.18.10",
     "@babel/runtime": "^7.18.9",
+    "@joi/date": "^2.1.0",
     "@types/morgan": "^1.9.3",
     "@types/node-cron": "^3.0.2",
     "@types/nodemailer": "^6.4.5",
