--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "olisa",
   "version": "1.0.0",
-  "main": "./src/app.ts",
+  "main": "./dist/app.js",
   "repository": "https://github.com/oleesir/medicine_tracker_be.git",
   "author": "oleesir <oleesir@gmail.com>",
   "license": "MIT",
   "engines": {
-    "node": "18.x"
+    "node": "v18.10.0"
   },
   "type": "module",
   "scripts": {
     "dev": "cross-env NODE_ENV=development ts-node-dev ./src/app.ts --exec babel-node",
     "clean": "rm -rf dist",
     "build": "npm run clean && cross-env NODE_ENV=production babel --extensions .ts ./src -d ./dist",
-    "start": "cross-env  NODE_ENV=production node ./dist/app.js"
+    "start": "cross-env NODE_ENV=production node ./dist/app.js"
   },
   "dependencies": {
     "@babel/cli": "^7.18.10",
