--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-USER=
-HOST=
-DATABASE=
-PASSWORD=
-PORT=
+DB_USER=
+DB_HOST=
+DB_NAME=
+DB_PASSWORD=
 DB_PORT=
+DB_PORT=
+DB_URI=
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
 MAILGUN_DOMAIN=
