--- a/package.json
+++ b/package.json
@@ -15,16 +15,9 @@
     "start": "NODE_ENV=production node ./dist/app.js"
   },
   "dependencies": {
-    "@babel/cli": "^7.18.10",
-    "@babel/runtime": "^7.18.9",
-    "@joi/date": "^2.1.0",
-    "@types/morgan": "^1.9.3",
-    "@types/node-cron": "^3.0.2",
-    "@types/nodemailer": "^6.4.5",
-    "@types/nodemailer-express-handlebars": "^4.0.2",
-    "@types/nodemailer-mailgun-transport": "^1.4.3",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -51,6 +44,15 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.6.3",
     "@types/pg": "^8.6.5",
+    "@babel/cli": "^7.18.10",
+    "@babel/runtime": "^7.18.9",
+    "@joi/date": "^2.1.0",
+    "@types/cors": "^2.8.12",
+    "@types/morgan": "^1.9.3",
+    "@types/node-cron": "^3.0.2",
+    "@types/nodemailer": "^6.4.5",
+    "@types/nodemailer-express-handlebars": "^4.0.2",
+    "@types/nodemailer-mailgun-transport": "^1.4.3",
     "nodemon": "^2.0.19",
     "typescript": "^4.7.4"
   }
