--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,9 @@ DB_HOST=
 DB_NAME=
 DB_PASSWORD=
 DB_PORT=
-DB_PORT=
-DB_URI=
+DB_POOL_SIZE=
+DB_POOL_CLIENT_IDLE_TIMEOUT=
+DB_POOL_CLIENT_CONNECTION_TIMEOUT=
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
 MAILGUN_DOMAIN=
