--- a/package.json
+++ b/package.json
@@ -25,34 +25,36 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.2",
+    "node-postgres": "^0.6.2",
     "nodemailer": "^6.7.8",
     "nodemailer-express-handlebars": "^5.0.0",
     "nodemailer-mailgun-transport": "^2.1.4",
     "path": "^0.12.7",
     "pg": "^8.7.3",
+    "postgres-migrations": "^5.3.0",
     "regenerator-runtime": "^0.13.9",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.18.10",
     "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
     "@babel/register": "^7.18.9",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "^18.6.3",
-    "@types/pg": "^8.6.5",
-    "@babel/cli": "^7.18.10",
     "@babel/runtime": "^7.18.9",
     "@joi/date": "^2.1.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
+    "@types/node": "^18.6.3",
     "@types/node-cron": "^3.0.2",
     "@types/nodemailer": "^6.4.5",
     "@types/nodemailer-express-handlebars": "^4.0.2",
     "@types/nodemailer-mailgun-transport": "^1.4.3",
+    "@types/pg": "^8.6.5",
     "nodemon": "^2.0.19",
     "typescript": "^4.7.4"
   }
