--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "oleesir <oleesir@gmail.com>",
   "license": "MIT",
   "engines": {
-    "node": "v18.10.0"
+    "node": "18.x"
   },
   "scripts": {
     "dev": "NODE_ENV=development ts-node-dev ./src/app.ts --exec babel-node",
@@ -33,7 +33,10 @@
     "pg": "^8.7.3",
     "postgres-migrations": "^5.3.0",
     "regenerator-runtime": "^0.13.9",
-    "ts-node-dev": "^2.0.0"
+    "sequelize": "^6.28.0",
+    "sequelize-cli": "^6.6.0",
+    "ts-node-dev": "^2.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.10",
