--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "postgres-migrations": "^5.3.0",
     "regenerator-runtime": "^0.13.9",
     "sequelize": "^6.28.0",
-    "sequelize-cli": "^6.6.0",
     "ts-node-dev": "^2.0.0",
     "uuid": "^9.0.0"
   },
@@ -59,6 +58,7 @@
     "@types/nodemailer-mailgun-transport": "^1.4.3",
     "@types/pg": "^8.6.5",
     "nodemon": "^2.0.19",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "sequelize-cli": "^6.6.0"
   }
 }
