--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "joi": "^17.6.2",
@@ -27,8 +28,6 @@
     "node-cron": "^3.0.2",
     "node-postgres": "^0.6.2",
     "nodemailer": "^6.7.8",
-    "nodemailer-express-handlebars": "^5.0.0",
-    "nodemailer-mailgun-transport": "^2.1.4",
     "path": "^0.12.7",
     "pg": "^8.7.3",
     "postgres-migrations": "^5.3.0",
@@ -54,11 +53,9 @@
     "@types/node": "^18.6.3",
     "@types/node-cron": "^3.0.2",
     "@types/nodemailer": "^6.4.5",
-    "@types/nodemailer-express-handlebars": "^4.0.2",
-    "@types/nodemailer-mailgun-transport": "^1.4.3",
     "@types/pg": "^8.6.5",
     "nodemon": "^2.0.19",
-    "typescript": "^4.7.4",
-    "sequelize-cli": "^6.6.0"
+    "sequelize-cli": "^6.6.0",
+    "typescript": "^4.7.4"
   }
 }
