feat: implement twilio sms message

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,8 @@
-DB_USER=
-DB_HOST=
-DB_NAME=
-DB_PASSWORD=
-DB_PORT=
-DB_POOL_SIZE=
-DB_POOL_CLIENT_IDLE_TIMEOUT=
-DB_POOL_CLIENT_CONNECTION_TIMEOUT=
+DEV_DATABASE_URL=
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
-MAILGUN_DOMAIN=
-MAILGUN_API_KEY=
-MAILGUN_FROM=
+MAIL_SENDER=
+MAIL_PASSWORD=
+TWILO_SID=
+TWILO_AUTH_TOKEN=
+PHONE_NUMBER=
