--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "regenerator-runtime": "^0.13.9",
     "sequelize": "^6.28.0",
     "ts-node-dev": "^2.0.0",
+    "twilio": "^4.7.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
